# versavis

./: .gitignore  .gitmodules  CHANGELOG.rst  LICENSE  README.md
.github/workflows/: build_test.yml
firmware/: 98-versa-vis.rules  setup.sh
firmware/libraries/versavis/: keywords.txt  library.properties
firmware/libraries/versavis/src/: ADIS16445.cpp  ADIS16445.h  ADIS16448AMLZ.cpp  ADIS16448AMLZ.h  ADIS16448BMLZ.cpp  ADIS16448BMLZ.h  ADIS16460.cpp  ADIS16460.h  BMI055.cpp  BMI055.h  BMI088.cpp  BMI088.h  Camera.cpp  Camera.h  ExternalEvent.cpp  ExternalEvent.h  Imu.cpp  Imu.h  LidarLite.cpp  LidarLite.h  Sensor.cpp  Sensor.h  TimedSensor.cpp  TimedSensor.h  Timer.cpp  Timer.h  ULanding.cpp  ULanding.h  VN100.cpp  VN100.h  helper.cpp  helper.h  versavis_configuration.h  versavis_configuration_Rosi.h
firmware/libraries/versavis/src/nmea_parser/: NmeaParser.cpp  NmeaParser.h
firmware/libraries/versavis/src/nmea_parser/msg/: ZdaMessage.cpp  ZdaMessage.h  helper.h
firmware/versavis/: versavis.ino
image_numbered_msgs/: CMakeLists.txt  package.xml
image_numbered_msgs/msg/: ImageNumbered.msg
scripts/: calculate_img_delay.py  calculate_trigger_rates.m  plot_timestamps_siemens.py  show_timings.py
scripts/evaluation/: cam_imu.m  ekf_evaluation.m  readTopic.m
versavis/: CMakeLists.txt  nodelet_plugin.xml  package.xml
versavis/cfg/: basler_acA1920-155uc_master.yaml  basler_acA1920-155uc_slave.yaml  chameleon3.yaml  slam_box_cam0.yaml  slam_box_cam0_config_service_calls.sh  slam_box_cam1.yaml  slam_box_cam_parameters.txt
versavis/include/versavis/: versavis_synchronizer.h
versavis/launch/: bf_mono_sls_versavis_run_versavis .launch  bf_sls_versavis_run_versavis.launch  dual_bf_colour_sls_versavis_run_versavis.launch  dual_bf_mono_sls_versavis_run_versavis.launch  image_proc.launch  nodelets.launch  pylon_camera_node_slam_box_cam0.launch  pylon_camera_node_slam_box_cam1.launch  rb_pylon.launch  rb_stereo.launch  run_anymal.launch  run_anymal_bear.launch  run_cameras.launch  run_imu.launch  run_imu_zero.launch  run_lidar_lite.launch  run_lidar_stick_10hz.launch  run_lidar_stick_20hz.launch  run_lidar_stick_calibration.launch  run_lidar_stick_wo_lidar.launch  run_mono_BFS.launch  run_mono_basler.launch  run_mono_basler2.launch  run_mono_chameleon.launch  run_sensor_flex_vi.launch  run_smb_vi.launch  run_stereo_basler.launch  run_stereo_basler_node.launch  run_stereo_basler_zero.launch  run_stereo_imu.launch  run_u_landing.launch  run_versavis.launch  run_versavis_bfs_adis16448_cam0.launch  run_versavis_bravo.launch  run_versavis_cam0.launch  run_versavis_pylon_ros.launch  run_versavis_slambox.launch  run_versavis_slambox_nodelet.launch  run_versavis_supermegabot.launch  run_versavis_thermal.launch  (+8 more)
versavis/msg/: ImuMicro.msg  RangeMicro.msg  TimeNumbered.msg
versavis/src/: versavis_imu_receiver.cpp  versavis_range_receiver.cpp  versavis_synchronizer.cpp  versavis_synchronizer_node.cpp  versavis_synchronizer_nodelet.cpp
