<?xml version="1.0"?>
<package format="2">
  <name>image_numbered_msgs</name>
  <version>0.0.1</version>
  <description>The image_numbered_msgs package</description>
  <maintainer email="ftschopp@ethz.ch">Florian Tschopp</maintainer>
  <license>closed</license>
  <url type="website">https://github.com/ethz-asl/versavis</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml" />
  </export>
</package>
